--- a/src/assets/styles/variables/_color-variables.scss
+++ b/src/assets/styles/variables/_color-variables.scss
@@ -1,6 +1,7 @@
 // 1.고정 - 중립(공용) 색상 (공용으로 사용되므로 굳이 동적으로 받아올 필요 없음)
 $white: #ffffff;
 $black: #000000;
+$yellow: #fff9c4;
 $gray-50: #f9fafb;
 $gray-100: #f3f4f6;
 $gray-200: #c4c4c4;
@@ -19,13 +20,5 @@ $danger-color: #e74c3c; // 위험 (빨강)
 $info-color: #3498db; // 정보 (파랑)
 
 // 3.고정 - 텍스트 색상
-$text-primary: #333333; // 기본 텍스트
-$text-secondary: #646464; // 보조 텍스트
-$text-muted: #999999; // 흐린 텍스트
-
-// 4.고정 - 배경 색상
-$bg-primary: $white;
-$bg-secondary: $gray-200;
-
-// 5.브랜드 색상(여러 버전)
-$primary-color: #d0021b; // 보라색 (주요)
+$primary-text: #333333; // 기본 텍스트
+$secondary-text: #999999; // 흐린 텍스트
